Frontend ombygning, 2 commit

--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <!-- Latest compiled and minified CSS -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -12,6 +13,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous">
         </script>
+
+
 </head>
 
 <body>
@@ -34,7 +37,8 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0"></form>
-                    <input class="form-control mr-sm-2" type="text" id="searchInput" onkeyup="search()" placeholder="Hvilket ord søger du?" title="Skriv et ord" aria-label="Search">
+                <input class="form-control mr-sm-2" type="text" id="searchInput" onkeyup="search()" placeholder="Hvilket ord søger du?"
+                    title="Skriv et ord" aria-label="Search">
                 </form>
             </div>
         </nav>
