--- a/Ordbog/views/index.hbs
+++ b/Ordbog/views/index.hbs
@@ -13,7 +13,7 @@
 <p><a href="ordbog">ordbog</a> - som virker</p>
 <p><a href="redigerord">redigerord</a> - som ikke virker herfra</p>
 <p><a href="visord">visord</a> - som heller ikke virker herfra</p>
-<p><a href="tilfojord">tilfojord</a> - som virker</p>
+<p><a href="ordbog/tilfojord">tilfojord</a> - som virker</p>
 <p><a href="inputtypes">inputtypes.html</a> - som ikke virker herfra</p>
 
   </body>
