--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#">Seneste</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tilfojord">Tilføj</a>
+                        <a class="nav-link" href="/ordbog/tilfojord">Tilføj</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0"></form>
