--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -48,11 +48,74 @@
 <form action="./ordbog/uploadaudio" method="POST" enctype="multipart/form-data">
     <input type="file" accept="audio/*" name="audio" capture>
     <input type="submit" value="upload">
+
+    <br><br><br>
+
+    <button id="record">Record audio</button>
+    <button id="stop" disabled="">Stop</button>
+    
+    <script>
+        // This example uses MediaRecorder to record from a live audio stream,
+        // and uses the resulting blob as a source for an audio element.
+        //
+        // The relevant functions in use are:
+        //
+        // navigator.mediaDevices.getUserMedia -> to get audio stream from microphone
+        // MediaRecorder (constructor) -> create MediaRecorder instance for a stream
+        // MediaRecorder.ondataavailable -> event to listen to when the recording is ready
+        // MediaRecorder.start -> start recording
+        // MediaRecorder.stop -> stop recording (this will generate a blob of data)
+        // URL.createObjectURL -> to create a URL from a blob, which we can use as audio src
+
+        var recordButton, stopButton, recorder;
+
+        window.onload = function () {
+            recordButton = document.getElementById('record');
+            stopButton = document.getElementById('stop');
+
+            // get audio stream from user's mic
+            navigator.mediaDevices.getUserMedia({
+                audio: true
+            })
+                .then(function (stream) {
+                    recordButton.disabled = false;
+                    recordButton.addEventListener('click', startRecording);
+                    stopButton.addEventListener('click', stopRecording);
+                    recorder = new MediaRecorder(stream);
+
+                    // listen to dataavailable, which gets triggered whenever we have
+                    // an audio blob available
+                    recorder.addEventListener('dataavailable', onRecordingReady);
+                });
+        };
+
+        function startRecording() {
+            recordButton.disabled = true;
+            stopButton.disabled = false;
+
+            recorder.start();
+        }
+
+        function stopRecording() {
+            recordButton.disabled = false;
+            stopButton.disabled = true;
+
+            // Stopping the recorder will eventually trigger the `dataavailable` event and we can complete the recording process
+            recorder.stop();
+        }
+
+        function onRecordingReady(e) {
+           
+            e.data; 
+            
+        }
+    </script>
 </form>
 
 <h1>Upload Video</h1>
 
 <form action="./ordbog/uploadvideo" method="POST" enctype="multipart/form-data">
-    <input type="file" accept="video/x-flv, video/mp4, application/x-mpegURL, video/MP2T, video/3gpp, video/quicktime, video/x-msvideo, video/x-ms-wmv" name="video">
+    <input type="file" accept="video/x-flv, video/mp4, application/x-mpegURL, video/MP2T, video/3gpp, video/quicktime, video/x-msvideo, video/x-ms-wmv"
+        name="video">
     <input type="submit" value="upload">
 </form>
