Nu virker søge funktionen.

--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0"></form>
-                <input class="form-control mr-sm-2" type="text" id="searchInput" onkeyup="search()" placeholder="Hvilket ord søger du?"
+                <input class="form-control mr-sm-2" type="text" id="searchInput" onkeyup="search2()" placeholder="Hvilket ord søger du?"
                     title="Skriv et ord" aria-label="Search">
                 </form>
             </div>
