--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -46,7 +46,7 @@
 
   <script>
     // Kører her efter siden er indlæst og fjerner de 3 sidste tomme ord html objekter.
-    let ordArray = document.getElementsByTagName("li");
+    let ordArray = document.getElementsByClassName("card");
     let ordArrayLength = ordArray.length;
 
     ordArray[ordArrayLength - 3].remove();
