Nu virker tilføj ord.

--- a/Ordbog/views/tilfojord.hbs
+++ b/Ordbog/views/tilfojord.hbs
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div id="tilfoj_ord">
-            <form method="POST" action="./ordbog/postord">
+            <form method="POST" action="./postord">
                 <p id="overskriftTilfojOrd" class="overskrift">Nyt ord:<br></p>
                 <input type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her"></input>
                 <input type="submit" value="Gem"></input>
