--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="/ordbog">Ordbog <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
