Design forbedringer til nav-bar og tilføj ord.

--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -26,18 +26,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item mr-2 ml-2">
                         <a class="nav-link" href="/ordbog">Ordbog <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mr-2 ml-2">
                         <a class="nav-link" href="#">Seneste</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mr-2 ml-2">
                         <a class="nav-link" href="/ordbog/tilfojord">Tilføj</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0"></form>
-                <input class="form-control mr-sm-2" type="text" id="searchInput" onkeyup="search2()" placeholder="Hvilket ord søger du?"
+                <input class="form-control mr-sm-2 ml-sm-2" type="text" id="searchInput" onkeyup="search2()" placeholder="Hvilket ord søger du?"
                     title="Skriv et ord" aria-label="Search">
                 </form>
             </div>
