--- a/Ordbog/views/tilfojord.hbs
+++ b/Ordbog/views/tilfojord.hbs
@@ -10,10 +10,10 @@
 <body>
     <section>
         <div id="tilfoj_ord">
-            <form method="POST" action="./postord">
-                <p id="overskriftTilfojOrd" class="overskrift">Nyt ord:<br></p>
-                <input type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her"></input>
-                <input type="submit" value="Gem"></input>
+            <h3 class="m-4">Nyt ord<br></h3>
+            <form class="form-inline" method="POST" action="./postord">
+                <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her">
+                <input class="btn btn-primary ml-2" type="submit" value="Gem">
             </form>
         </div>
     </section>
