test side layout

--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -1,3 +1,13 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+</head>
+<body> 
+<div class="ml-4">
 <h1>Hello Test</h1>
 <h2>insert ord eller insert/vælg nyt image/sound/video:</h2>
 <form method="POST" action="/api/postord">
@@ -119,3 +129,6 @@
         name="video">
     <input type="submit" value="upload">
 </form>
+</div>
+</body>
+</html>
