--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -22,6 +22,7 @@
               card's
               content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Slet</a>
           </div>
         </div>
         {{/each}}
