--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -21,7 +21,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
               card's
               content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Rediger</a>
             <a href="#" class="btn btn-primary">Slet</a>
           </div>
         </div>
