Tilføj ord og kategori

--- a/Ordbog/views/tilfojord.hbs
+++ b/Ordbog/views/tilfojord.hbs
@@ -12,8 +12,14 @@
         <div id="tilfoj_ord">
             <h3 class="m-4">Nyt ord<br></h3>
             <form class="form-inline" method="POST" action="./postord">
-                <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her">
-                <input class="btn btn-primary ml-2" type="submit" value="Gem">
+                <div>
+                    <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Ord">
+                </div>
+                <div>
+                    <input class="form-control ml-4" type="text" name="kategori" id="input_nyt_ord" placeholder="Kategori">
+                </div>
+                    <input class="btn btn-primary ml-2" type="submit" value="Gem">
+                
             </form>
         </div>
     </section>
