--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -19,7 +19,7 @@
           <div class="card-body">
             <h5 class="card-title">{{this.ord}}</h5>
             <p class="card-text">Kategori: </p>
-            <a href="#" class="btn btn-primary">Rediger</a>
+            <a href="/ordbog/redigerord/{{_id}}" class="btn btn-primary">Rediger</a>
             <a href="#" class="btn btn-primary">Slet</a>
           </div>
         </div>
