kategori vises i ordbog

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -18,7 +18,7 @@
           <img class="card-img-top" src="images/defaultPicture.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{this.ord}}</h5>
-            <p class="card-text">Kategori: </p>
+            <p class="card-text">Kategori: {{kategori}} </p>
             <a href="/ordbog/redigerord/{{_id}}" class="btn btn-primary">Rediger</a>
             <a href="#" class="btn btn-primary">Slet</a>
           </div>
