Nu virker slet knappen.

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -20,7 +20,7 @@
             <h5 class="card-title">{{this.ord}}</h5>
             <p class="card-text">Kategori: </p>
             <a href="/ordbog/redigerord/{{_id}}" class="btn btn-primary">Rediger</a>
-            <a href="#" class="btn btn-primary">Slet</a>
+            <a href="/ordbog/slet_ord/{{_id}}" class="btn btn-primary">Slet</a>
           </div>
         </div>
         {{/each}}
