--- a/Ordbog/views/redigerord.hbs
+++ b/Ordbog/views/redigerord.hbs
@@ -2,53 +2,28 @@
 <html>
 
 <head>
-    <title>Ordbog</title>
+    <title>Rediger ord</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/tempOrdbogSheet.css">
-    <script src="javascripts/ordbog.js"></script>
 </head>
 
 <body>
-    <!-- Navigations panel / Header -->
-    <header>
-        <nav>
-            <ul class="panel">
-                <li id="js_dine_ord" class="menuknap" onclick="dine_ord()"><a href="#">Dine ord</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hovedafsnit -->
     <section>
-        <!-- Hovedafsnit / Dine ord -->
-        
-
-        <!-- Hovedafsnit / Tilføj ord -->
-        <div id="tilfoj_ord" style="display: none;">
-            <form method="POST" action="ordbog/postord">
-                <p id="overskriftTilfojOrd" class="overskrift">Nyt ord:<br></p>
-                <input type="text" name="ord" id="input_nyt_ord" placeholder="Skriv her"></input>
-                <input type="submit" value="Gem"></input>
+        <div>
+            <h3 class="m-4">Rediger ord<br></h3>
+            <form class="form-inline" method="POST" action="/ordbog/redigerord">
+                <input type="hidden" name="id" value={{this.id}}>
+                <div>
+                    <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Ord" value={{this.ord}}>
+                </div>
+                <div>
+                    <input class="form-control ml-4" type="text" name="kategori" id="input_nyt_ord" placeholder="Kategori" value={{this.kategori}}>
+                </div>
+                    <input class="btn btn-primary ml-2" type="submit" value="Gem">
+                
             </form>
         </div>
     </section>
-
-    <script>
-        // Kører her efter siden er indlæst og fjerner de 3 sidste tomme ord html objekter.
-        let ordArray = document.getElementsByName("ord");
-        let ordArrayLength = ordArray.length;
-
-        for (let i = 0; i <= ordArrayLength - 3; i++) {
-            if (ordArray[i].value == 0) {
-                ordArray[i].remove();
-            }
-        }
-
-        ordArrayLength = ordArray.length;
-        ordArray[ordArrayLength - 2].remove();
-
-    </script>
-
 </body>
 
 </html>
