--- a/Ordbog/views/index.hbs
+++ b/Ordbog/views/index.hbs
@@ -11,8 +11,8 @@
 
 <p><a href="test">test</a> -test side, hvor vis ord, tilfoj ord og slet ord virker. Rediger ord fungerer også nu! Samt upload af image, audio og video virker også</p>
 <p><a href="ordbog">ordbog</a> - som virker</p>
-<p><a href="redigerord">redigerord</a> - som ikke virker herfra</p>
-<p><a href="visord">visord</a> - som heller ikke virker herfra</p>
+<p><a href="redigerord">redigerord</a> - som ikke virker herfra (endpoint i ordbog)</p>
+<p><a href="visord">visord</a> - som heller ikke virker herfra (endpoint i ordbog)</p>
 <p><a href="ordbog/tilfojord">tilfojord</a> - som virker</p>
 <p><a href="inputtypes">inputtypes.html</a> - som ikke virker herfra</p>
 
