Det som Flenner sendte til mig virker nu.

--- a/Ordbog/views/redigerord.hbs
+++ b/Ordbog/views/redigerord.hbs
@@ -12,7 +12,7 @@
         <div>
             <h3 class="m-4">Rediger ord<br></h3>
             <form class="form-inline" method="POST" action="/ordbog/redigerord">
-                <input type="hidden" name="id" value={{this.id}}>
+                <input type="hidden" name="id" value={{this._id}}>
                 <div>
                     <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Ord" value={{this.ord}}>
                 </div>
