uploaded image files and ordbog.hbs update

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -15,7 +15,7 @@
       <div class="card-columns">
         {{#each this}}
         <div class="card" style="width: 18rem, background-color: #e3f2fd;">
-          <img class="card-img-top" src="images/defaultPicture.png" alt="Card image cap">
+          <img class="card-img-top" src={{image}} alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{this.ord}}</h5>
             <p class="card-text">Kategori: {{kategori}} </p>
