--- a/Ordbog/views/test.hbs
+++ b/Ordbog/views/test.hbs
@@ -49,7 +49,7 @@
 <h1>Upload Image</h1>
 
 <form action="./ordbog/uploadimage" method="POST" enctype="multipart/form-data">
-    <input type="file" accept="image/jpeg, image/png, image/jpg" name="image">
+    <input type="file" accept="image/jpeg, image/png, image/jpg" name="image" capture>
     <input type="submit" value="upload">
 </form>
 
