--- a/Ordbog/views/tilfojord.hbs
+++ b/Ordbog/views/tilfojord.hbs
@@ -11,15 +11,16 @@
     <section>
         <div id="tilfoj_ord">
             <h3 class="m-4">Nyt ord<br></h3>
-            <form class="form-inline" method="POST" action="./postord">
-                <div>
-                    <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Ord">
-                </div>
-                <div>
-                    <input class="form-control ml-4" type="text" name="kategori" id="input_nyt_ord" placeholder="Kategori">
-                </div>
-                    <input class="btn btn-primary ml-2" type="submit" value="Gem">
-                
+            <form method="POST" action="./postord" enctype="multipart/form-data">
+
+                <input class="form-control ml-4" type="text" name="ord" id="input_nyt_ord" placeholder="Ord">
+                <br>
+                <input class="form-control ml-4" type="text" name="kategori" id="input_nyt_ord" placeholder="Kategori">
+                <br>
+                <input class="form-control ml-4" type="file" accept="image/jpeg, image/png, image/jpg" name="image" capture>
+                <br>
+                <input class="btn btn-primary ml-4" type="submit" value="Gem">
+
             </form>
         </div>
     </section>
