--- a/Ordbog/views/layout.hbs
+++ b/Ordbog/views/layout.hbs
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="/ordbog">Ordbog <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mr-2 ml-2">
-                        <a class="nav-link" href="#">Seneste</a>
+                        <a class="nav-link" href="/ordbog/seneste">Seneste</a>
                     </li>
                     <li class="nav-item mr-2 ml-2">
                         <a class="nav-link" href="/ordbog/tilfojord">Tilføj</a>
