Tilføjet: Til top knap

--- a/Ordbog/views/ordbog.hbs
+++ b/Ordbog/views/ordbog.hbs
@@ -38,6 +38,7 @@
       </div>
     </div>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
   </section>
 
   <script>
