--- a/Ordbog/public/stylesheets/style.css
+++ b/Ordbog/public/stylesheets/style.css
@@ -32,3 +32,24 @@ padding-bottom: 20px;
   font: 'Arial';
   font-weight: bold;
 }
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: 2px solid #fff; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #FAB32A; /* Set a background color */
+  color: #fff; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 25px; /* Rounded corners */
+  font: 'Arial';
+  font-weight: bold;
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
