--- a/Ordbog/views/seneste.hbs
+++ b/Ordbog/views/seneste.hbs
@@ -17,7 +17,7 @@
           {{#each this}}
           <div class="card" style="width: 18rem, background-color: #e3f2fd;">
             <a href="#collapse{{_id}}" data-toggle="collapse">
-              <img class="card-img-top" src="{{image}}" alt="Card image cap">
+              <img class="card-img-top" src="../{{image}}" alt="Card image cap">
 
               <div class="card-body">
                 <h5 class="card-title" style="color: grey">{{this.ord}}</h5>
