--- a/Super/views/sprogmakker/sprogmakkerside.html
+++ b/Super/views/sprogmakker/sprogmakkerside.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sprogmakkerside</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="/stylesheets/stylelogin.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
@@ -15,11 +15,7 @@
 
 
   <!--Logo øverst oppe-->
-  <a href="../../Clientside/login.html"><img class="logoutmenu" src="../../billeder/logout.png" alt="logout"></a>
-  <!--Galleriknap-->
-  <a href="../../inspiration/galleri.html"><img class="picturesmenu" src="../../billeder/billeder.png" alt="flere billeder"></a>
-  <!--Kamera knap-->
-  <a href="../../inspiration/kamera/kamera.html"><img class="cameramenu" src="../../billeder/camera.png" alt="Kamera"></a>
+  <a href="http://localhost:8080"><img class="logoutmenu" src="https://storage.googleapis.com/billedertilsprogapp/logout.png" alt="logout"></a>
 
 
  </header>
@@ -48,7 +44,7 @@
  <!--Knapper-->
  <div class="buttonsmenu">
   <p id="welcome_msg">welcome placeholder</p>
-  <button class="button" onclick="location.href='http://127.0.0.1:8080/Profil/sprogmakker/Sprogmakker.html'">Min Profil</button>
+  <button class="button" onclick="location.href='http://localhost:8080/Sprogmakker' /* + et ID*/">Min Profil</button>
   <button class="button">Min Ordbog</button>
   <button class="button">Chat</button>
 
