--- a/Super/views/index.hbs
+++ b/Super/views/index.hbs
@@ -2,9 +2,19 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/styleordbog.css' />
   </head>
   <body>
     <h1>{{title}}</h1>
+    <br>
+    <h1>Endpoints in the system</h1>
+
+<p><a href="test">test</a> -test side, hvor vis ord, tilfoj ord og slet ord virker. Rediger ord fungerer også nu! Samt upload af image, audio og video virker også</p>
+<p><a href="ordbog">ordbog</a> - som virker</p>
+<p><a href="redigerord">redigerord</a> - som ikke virker herfra (endpoint i ordbog)</p>
+<p><a href="visord">visord</a> - som heller ikke virker herfra (endpoint i ordbog)</p>
+<p><a href="ordbog/tilfojord">tilfojord</a> - som virker</p>
+<p><a href="inputtypes">inputtypes.html</a> - som ikke virker herfra</p>
+
   </body>
 </html>
