--- a/Super/views/kursist/kursistside.html
+++ b/Super/views/kursist/kursistside.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Kursistside</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="/stylesheets/stylelogin.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
@@ -15,12 +17,10 @@
 
 
   <!--Logo øverst oppe-->
-  <a href="../../Clientside/login.html"><img class="logoutmenu" src="../../public/stylesheets/logout.png" alt="logout"></a>
-  <!--Galleriknap-->
-  <a href="../../inspiration/galleri.html"><img class="picturesmenu" src="../../billeder/billeder.png" alt="flere billeder"></a>
-  <!--Kamera knap-->
-  <a href="../../inspiration/kamera/kamera.html"><img class="cameramenu" src="../../billeder/camera.png" alt="Kamera"></a>
-  
+  <a href="http://localhost:8080"><img class="logoutmenu" src="https://storage.googleapis.com/billedertilsprogapp/logout.png" alt="logout"></a>
+  <!--Velkomstbesked-->
+  <p id="welcome_msg">welcome placeholder</p>
+
 
  </header>
 
@@ -31,26 +31,22 @@
        var cookieDataArray = document.cookie.split("=");
        var userDataObject = JSON.parse(cookieDataArray[1]);
 
-       //console.log(userDataObject);
-       //console.log(cookieDataArray);
-
        document.getElementById("welcome_msg").innerHTML = "velkommen " + userDataObject.username
        
 
-       //console.log(document.cookie.split("="));
-       //console.log(document.getElementById("welcome_msg").innerHTML)
-       //document.getElementById("welcome_msg").innerHTML = document.cookie.split("=")[1]
+       
      } 
     </script>
 
     <!--Knapper-->
     <div class="buttonsmenu">
-      <p id="welcome_msg">welcome placeholder</p>
-      <button class="button" onclick="window.location.href='https://sprogapp.appspot.com/Kursist'">Min Profil</button>
-      <button class="button">Min Ordbog</button>
-      <button class="button" onclick="window.location.href='https://sprogapp.appspot.com/chatover'">Chat</button>
+        <button class="button" onclick="window.location.href='http://localhost:8080/Kursist' /* + et ID */">Min Profil</button>
+        <button class="button" onclick="location.href='http://localhost:8080/ordbog'">Min Ordbog</button>
+        <button class="button" onclick="window.location.href='http://localhost:8080/chatOverview'"> Chat </button>
+  
+      </div>
 
-    </div>
+    
 
   </body>
 </html>
