--- a/Super/views/test.hbs
+++ b/Super/views/test.hbs
@@ -1,3 +1,13 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+</head>
+<body> 
+<div class="ml-4">
 <h1>Hello Test</h1>
 <h2>insert ord eller insert/vælg nyt image/sound/video:</h2>
 <form method="POST" action="/api/postord">
@@ -11,7 +21,7 @@
 <h2>Edit ord/image/sound/video:</h2>
 
 <form method="POST" action="/api/updateord">
-    <input type="text" id= 'id' name="ord" placeholder="ord">
+    <input type="text" name="ord" placeholder="ord">
     <input type="text" name="nyt_ord" placeholder="nyt_ord">
     <button type="submit">Send</button>
 </form>
@@ -37,8 +47,88 @@
 </form>
 
 <h1>Upload Image</h1>
- 
-<form action="./ordbog/uploadimage" method="post" enctype="multipart/form-data">
-        <input type="file" accept="image/jpeg, image/png" name="image" >
-        <input type="submit" value="upload">
+
+<form action="./ordbog/uploadimage" method="POST" enctype="multipart/form-data">
+    <input type="file" accept="image/jpeg, image/png, image/jpg" name="image" capture>
+    <input type="submit" value="upload">
 </form>
+
+<h1>Upload Audio</h1>
+
+<form action="./ordbog/uploadaudio" method="POST" enctype="multipart/form-data">
+    <input type="file" accept="audio/*" name="audio" capture>
+    <input type="submit" value="upload">
+
+    <br><br><br>
+
+    <button id="record">Record audio</button>
+    <button id="stop" disabled="">Stop</button>
+    
+    <script>
+        // This example uses MediaRecorder to record from a live audio stream,
+        // and uses the resulting blob as a source for an audio element.
+        //
+        // The relevant functions in use are:
+        //
+        // navigator.mediaDevices.getUserMedia -> to get audio stream from microphone
+        // MediaRecorder (constructor) -> create MediaRecorder instance for a stream
+        // MediaRecorder.ondataavailable -> event to listen to when the recording is ready
+        // MediaRecorder.start -> start recording
+        // MediaRecorder.stop -> stop recording (this will generate a blob of data)
+        // URL.createObjectURL -> to create a URL from a blob, which we can use as audio src
+
+        var recordButton, stopButton, recorder;
+
+        window.onload = function () {
+            recordButton = document.getElementById('record');
+            stopButton = document.getElementById('stop');
+
+            // get audio stream from user's mic
+            navigator.mediaDevices.getUserMedia({
+                audio: true
+            })
+                .then(function (stream) {
+                    recordButton.disabled = false;
+                    recordButton.addEventListener('click', startRecording);
+                    stopButton.addEventListener('click', stopRecording);
+                    recorder = new MediaRecorder(stream);
+
+                    // listen to dataavailable, which gets triggered whenever we have
+                    // an audio blob available
+                    recorder.addEventListener('dataavailable', onRecordingReady);
+                });
+        };
+
+        function startRecording() {
+            recordButton.disabled = true;
+            stopButton.disabled = false;
+
+            recorder.start();
+        }
+
+        function stopRecording() {
+            recordButton.disabled = false;
+            stopButton.disabled = true;
+
+            // Stopping the recorder will eventually trigger the `dataavailable` event and we can complete the recording process
+            recorder.stop();
+        }
+
+        function onRecordingReady(e) {
+           
+            e.data; 
+            
+        }
+    </script>
+</form>
+
+<h1>Upload Video</h1>
+
+<form action="./ordbog/uploadvideo" method="POST" enctype="multipart/form-data">
+    <input type="file" accept="video/x-flv, video/mp4, application/x-mpegURL, video/MP2T, video/3gpp, video/quicktime, video/x-msvideo, video/x-ms-wmv"
+        name="video">
+    <input type="submit" value="upload">
+</form>
+</div>
+</body>
+</html>
